<resources>
    <string name="app_name">Lose it</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="login_to_start">Login to start</string>
    <string name="do_not_have_an_account_yet_sign_in">Do not have an account yet? <font color="#498F53">Sign up</font></string>
    <string name="lose_it">Lose it!</string>
    <string name="already_have_an_account_login">Already have an account? <font color="#498F53">Login</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_empty_username_error">Username can not be empty!</string>
    <string name="msg_empty_password_error">Password can not be empty!</string>
    <string name="msg_empty_email_error">Email can not be empty!</string>
    <string name="msg_invalid_email_error">This email address is not valid!</string>
    <string name="msg_invalid_password_error">The password must be at least 6 characters!</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="data_use_hint">We use these data to calculate and recommend the best daily diet for you.</string>
    <string name="ask_gender">What\'s your gender?</string>
    <string name="ask_birth">What\'s your date of birth?</string>
    <string name="ask_height">What\'s your height?</string>
    <string name="ask_weight">What\'s your current weight?</string>
    <string name="ask_goal_weight">What\'s your goal weight?</string>
    <string name="projected_progress">Your projected progress</string>
    <string name="save">Save</string>
    <string name="recommended">Recommended</string>
    <string name="_0lbs_week">0lbs/week</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="recipe">Recipe</string>
    <string name="forum">Forum</string>
    <string name="me">Me</string>
    <string name="eat">EAT</string>
    <string name="_2000">2000</string>
    <string name="left">LEFT</string>
    <string name="kcal">KCAL</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_diet">Add new diet</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="kcal_">Kcal:</string>
    <string name="name">Name:</string>
    <string name="err_msg_empty_diet_name">Name can not be empty!</string>
    <string name="err_msg_invalid_kcal">Kcal can not be less than 0!</string>
    <string name="err_msg_empty_kcal">Kcal can not be empty!</string>
    <string name="hint">Hint</string>
    <string name="delete_diet_hint">Are you sure to delete this diet?</string>
    <string name="yes">Yes</string>
    <string name="error_msg_longin_failed">User name or password error!</string>
    <string name="error_msg_sign_up_failed">Sign up failed! Please try again. </string>
    <string name="error_msg_invalid_goal_weight">You\'re trying to lose weight,so your goal weight should be less than your current weight.</string>
    <string name="error_msg_submit_info_error">Data submission failed, please try again.</string>
    <string name="error_msg_no_login">Please log in first!</string>
    <string name="error_msg_fetch_user_info">Fetch user information failed!</string>
    <string name="msg_sign_up_successfully">Sign up successfully!</string>
    <string name="hint_msg_discard_info_and_exit">Are you sure to discard the data already filled in and exit?</string>
    <string name="trying_to_load">Trying to load…</string>
    <string name="load_user_data">Loading user data…</string>
    <string name="_0">0</string>
    <string name="current_weight">Current weight (kg):</string>
    <string name="set_today_weight">Set today weight</string>
    <string name="log_out">log out</string>
    <string name="gender">Gender:</string>
    <string name="height">Height (cm):</string>
    <string name="goal_weight">Goal weight (kg):</string>
    <string name="email_">Email:</string>
    <string name="my_information">My Information</string>
    <string name="age">Age:</string>
    <string name="reset_information">Reset Info</string>
    <string name="msg_confirm_log_out">Are you sure to log out?</string>
    <string name="birth">Birth</string>
    <string name="record_weight">Record Weight</string>
    <string name="record_today_weight">Record Today Weight</string>
    <string name="error_msg_fecth_user_info">Failed to fetch user information!</string>
    <string name="amount_ounce">Amount(ounce):</string>
    <string name="calories_kcal_per_ounce">Calories(Kcal per ounce):</string>
    <string name="food_name">Food Name:</string>
    <string name="err_msg_empty_food_weight">Food weight can not be empty!</string>
</resources>