<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    tools:context=".ui.me.MeFragment">

    <TextView
        android:id="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@color/primary_green"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/my_information"
        android:textStyle="bold" />


    <TableLayout
        android:id="@+id/table_user_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:divider="@drawable/table_v_divider"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="beginning|middle|end"
        app:layout_constraintBottom_toTopOf="@+id/button_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/me_user_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/email_" />

            <TextView
                android:id="@+id/me_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/me_gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/birth" />

            <TextView
                android:id="@+id/me_birth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/height" />

            <TextView
                android:id="@+id/me_height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/current_weight" />

            <TextView
                android:id="@+id/me_current_weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:minHeight="@dimen/min_table_row_height"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end">

            <TextView
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/goal_weight" />

            <TextView
                android:id="@+id/me_goal_weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="@+id/button_reset_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_reset_info"
        app:layout_constraintTop_toTopOf="@+id/button_reset_info" />

    <Button
        android:id="@+id/button_reset_info"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/aqua"
        android:text="@string/reset_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_log_out"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>