<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/edit_diet_dialog_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_diet_dialog_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_diet_dialog_title" />

    <TextView
        android:id="@+id/tv_diet_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:minWidth="60dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_diet_dialog_name"
        app:layout_constraintEnd_toStartOf="@+id/edit_diet_dialog_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_diet_dialog_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center|center_vertical"
        android:minWidth="60dp"
        android:text="@string/kcal_"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_diet_dialog_kcal"
        app:layout_constraintEnd_toStartOf="@+id/edit_diet_dialog_kcal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_diet_dialog_kcal" />

    <EditText
        android:id="@+id/edit_diet_dialog_kcal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_dialog_name" />

    <TextView
        android:id="@+id/tv_diet_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_diet"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_diet_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        android:backgroundTint="#EF6C00"
        app:layout_constraintEnd_toStartOf="@+id/button_diet_dialog_confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_dialog_kcal" />

    <Button
        android:id="@+id/button_diet_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/button_diet_dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_diet_dialog_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_diet_dialog_cancel" />

    <TextView
        android:id="@+id/tv_diet_dialog_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="#E53935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_diet_dialog_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>